[gd_scene load_steps=15 format=3 uid="uid://cg56oams6ehj5"]

[ext_resource type="Script" path="res://Scenes/list_item.gd" id="1_1mal0"]
[ext_resource type="StyleBox" uid="uid://ufgo1cnge15c" path="res://Scenes/Course_Card_panel.tres" id="2_suvye"]
[ext_resource type="StyleBox" uid="uid://vpm6jgp1max0" path="res://Scenes/white_panel.tres" id="2_tt0df"]
[ext_resource type="Theme" uid="uid://5gvxik861gq4" path="res://Scenes/16_poppins.tres" id="3_kifu3"]
[ext_resource type="StyleBox" uid="uid://xuerbuit124m" path="res://Scenes/text_edit_normal.tres" id="4_nabhj"]
[ext_resource type="StyleBox" uid="uid://b8ewn0koxrxrv" path="res://Scenes/text_edit_focus.tres" id="5_63pib"]
[ext_resource type="Theme" uid="uid://clir2rfk6pscp" path="res://Scenes/Normal_Montserrat.tres" id="7_65kre"]
[ext_resource type="Texture2D" uid="uid://diqrirrcqupv1" path="res://Assets/Icons/Edit.svg" id="8_0f4k2"]
[ext_resource type="Texture2D" uid="uid://cq3bcd7im3yj2" path="res://Assets/Icons/Delete.svg" id="9_cgrdv"]
[ext_resource type="Texture2D" uid="uid://b38vi7gmgty6x" path="res://Assets/Icons/Emtpy Check.svg" id="10_8bwn8"]
[ext_resource type="Texture2D" uid="uid://clqj760l0f03v" path="res://Assets/Icons/Checked.svg" id="10_brw7c"]

[sub_resource type="Theme" id="Theme_6ueds"]
MarginContainer/colors/Background = Color(0.988235, 0.870588, 0.454902, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e3j03"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n2k4u"]

[node name="list_item" type="MarginContainer"]
custom_minimum_size = Vector2(300, 64)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 170.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource("Theme_6ueds")
script = ExtResource("1_1mal0")

[node name="white_panel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_tt0df")

[node name="yellow_panel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_suvye")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="item_edit" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="item_name_edit" type="TextEdit" parent="MarginContainer/HBoxContainer/item_edit"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme = ExtResource("3_kifu3")
theme_override_styles/normal = ExtResource("4_nabhj")
theme_override_styles/focus = ExtResource("5_63pib")
placeholder_text = "Course name"
scroll_fit_content_height = true
text_direction = 1

[node name="item_link_edit" type="TextEdit" parent="MarginContainer/HBoxContainer/item_edit"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_styles/normal = ExtResource("4_nabhj")
theme_override_styles/focus = ExtResource("5_63pib")
placeholder_text = "Course Description"
scroll_fit_content_height = true

[node name="item_label" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 0

[node name="item_name" type="Label" parent="MarginContainer/HBoxContainer/item_label"]
layout_mode = 2
theme = ExtResource("7_65kre")
theme_override_styles/normal = SubResource("StyleBoxEmpty_e3j03")
text = "COUSE NAME"

[node name="panel_separator" type="Panel" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_n2k4u")

[node name="edit_button" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
icon = ExtResource("8_0f4k2")
flat = true

[node name="delete_button" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
icon = ExtResource("9_cgrdv")
flat = true

[node name="panel_separator2" type="Panel" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/panel = SubResource("StyleBoxEmpty_n2k4u")

[node name="CheckButton" type="CheckBox" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_icons/checked = ExtResource("10_brw7c")
theme_override_icons/unchecked = ExtResource("10_8bwn8")
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[connection signal="toggled" from="MarginContainer/HBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
